--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "node-cron": "^3.0.3",
+    "nodemailer": "^7.0.3",
     "pg": "^8.15.6",
     "socket.io": "^4.8.1"
   },
